:mag: Update deps

--- a/src/lib/styles/prose.scss
+++ b/src/lib/styles/prose.scss
@@ -97,7 +97,7 @@ figure figcaption {
   }
 
   h2 {
-    --at-apply: 'text-4xl';
+    --at-apply: 'text-3xl';
   }
 
   h3 {
@@ -105,11 +105,11 @@ figure figcaption {
   }
 
   h4 {
-    --at-apply: 'text-2xl';
+    --at-apply: 'text-xl';
   }
 
   h5 {
-    --at-apply: 'text-xl';
+    --at-apply: 'text-lg';
   }
 
   h6 {
